--- a/index.html
+++ b/index.html
@@ -3,9 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bandsite</title>
 </head>
 <body>
-    
+    <header>
+        <section class="navigation">
+            <div class="navigation__title">
+                <h1>BANDSITE</h1>
+            </div>
+            <ul class="navigation__btns">
+                <li class=""><a href="">Biography</a></li>
+                <li class=""><a href="">Shows</a></li>
+            </ul>
+        </section>
+
+        <section class="hero">
+            <h2 class="hero__title">The Bees Knees</h2>
+            <img class="hero__img" src="" alt="the bees knees">
+        </section>
+    </header>
+
+    <main>
+        <section class="introduction">
+            <h2 class="introduction__title">About the Musicians</h2>
+            <img class="introduction__img" src="" alt="about the band">
+            <p class="introduction__text"></p>
+        </section>
+        <section class="about">
+            <h3 class="about__title">The Bees Knees</h3>
+            <p class="about__content"></p>
+            <br>
+            <p class="about__content"></p>
+        </section>
+        <section class="gallery">
+            <h2 class="gallery__title">Photo Gallery</h2>
+            <div class="gallery__imgs">
+                <img class="gallery__imgs-1" src="" alt="">
+                <img class="gallery__imgs-2" src="" alt="">
+                <img class="gallery__imgs-3" src="" alt="">
+                <img class="gallery__imgs-4" src="" alt="">
+                <img class="gallery__imgs-5" src="" alt="">
+                <img class="gallery__imgs-6" src="" alt="">
+                <img class="gallery__imgs-7" src="" alt="">
+                <img class="gallery__imgs-8" src="" alt="">
+                <img class="gallery__imgs-9" src="" alt="">
+            </div>
+
+        </section>
+    </main>
+    <footer>
+        <section class="">
+
+        </section>
+        <section class="management">
+            
+        </section>
+        <section class="artist-group">
+
+        </section>
+    </footer>
 </body>
 </html>
