--- a/index.html
+++ b/index.html
@@ -14,41 +14,62 @@
                 <h1>BANDSITE</h1>
             </div>
             <ul class="navigation__btns">
-                <li class=""><a href="">Biography</a></li>
-                <li class=""><a href="">Shows</a></li>
+                <li><a class="navigation__bio-btn" href="./index.html">Biography</a></li>
+                <li><a class="navigation__shows-btn" href="">Shows</a></li>
             </ul>
         </section>
 
         <section class="hero">
             <h2 class="hero__title">The Bees Knees</h2>
-            <img class="hero__img" src="" alt="the bees knees">
+            <img class="hero__img" src="./assets/images/hero-bio.jpg" alt="the bees knees">
         </section>
     </header>
 
     <main>
         <section class="introduction">
             <h2 class="introduction__title">About the Musicians</h2>
-            <img class="introduction__img" src="" alt="about the band">
-            <p class="introduction__text"></p>
+            <img class="introduction__img" src="./assets/images/band.jpg" alt="about the band">
+            <p class="introduction__content">"We push each other to be the best. 
+                It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
+            <br>
+            <p class="introduction__text">- Lead vocalist of The Bees Knees</p>
         </section>
         <section class="about">
             <h3 class="about__title">The Bees Knees</h3>
-            <p class="about__content"></p>
+            <p class="about__content">The Bees Knees is a pop rock band originating from San Francisco, California. The band 
+                                    consists a dynamic lineup featuring two lead 
+                                    vocalists, two guitarists, a bassist, a keyboardist and a 
+                                    drummer. The band achieved its first commercial success as an 
+                                    unsigned act, drawing attention from their 
+                                    future manager. Having extensive experience 
+                                    working with both new and seasoned acts, the manager was confident the band could 
+                                    succeed even further with more support, pushing The Bees Knees to sign with a well 
+                                    known record label.</p>
             <br>
-            <p class="about__content"></p>
+            <p class="about__content">From there, the band has soared, gaining 
+                                international recognition and ranking in the 
+                                top 10 on the Poster Charts. New fans 
+                                immediately fell in love with the band’s original 
+                                and organic attitude, solidifying their place as 
+                                one of the hottest and fastest up and coming 
+                                acts of this century. Fans affectionately refer to 
+                                themselves as “The Hive” and are drawn to 
+                                their candid and authentic performances on 
+                                stage. The Bees Knees are currently recording 
+                                their second studio album, looking to be released in early 2024.</p>
         </section>
         <section class="gallery">
             <h2 class="gallery__title">Photo Gallery</h2>
             <div class="gallery__imgs">
-                <img class="gallery__imgs-1" src="" alt="">
-                <img class="gallery__imgs-2" src="" alt="">
-                <img class="gallery__imgs-3" src="" alt="">
-                <img class="gallery__imgs-4" src="" alt="">
-                <img class="gallery__imgs-5" src="" alt="">
-                <img class="gallery__imgs-6" src="" alt="">
-                <img class="gallery__imgs-7" src="" alt="">
-                <img class="gallery__imgs-8" src="" alt="">
-                <img class="gallery__imgs-9" src="" alt="">
+                <img class="gallery__imgs-1" src="./assets/images/Photo-gallery-1.jpg" alt="concert 1">
+                <img class="gallery__imgs-2" src="./assets/images/Photo-gallery-2.jpg" alt="concert 2">
+                <img class="gallery__imgs-3" src="./assets/images/Photo-gallery-3.jpg" alt="concert 3">
+                <img class="gallery__imgs-4" src="./assets/images/Photo-gallery-4.jpg" alt="concert 4">
+                <img class="gallery__imgs-5" src="./assets/images/Photo-gallery-5.jpg" alt="concert 5">
+                <img class="gallery__imgs-6" src="./assets/images/Photo-gallery-6.jpg" alt="concert 6">
+                <img class="gallery__imgs-7" src="./assets/images/Photo-gallery-7.jpg" alt="concert 7">
+                <img class="gallery__imgs-8" src="./assets/images/Photo-gallery-8.jpg" alt="concert 8">
+                <img class="gallery__imgs-9" src="./assets/images/Photo-gallery-9.jpg" alt="concert 9">
             </div>
         </section>
     </main>
