adding mobile, tablet, and desktop text styles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <section class="hero">
             <h2 class="hero__title">The Bees Knees</h2>
-            <img class="hero__img" src="./assets/images/hero-bio.jpg" alt="the bees knees">
+            <!-- <img class="hero__img" src="./assets/images/hero-bio.jpg" alt="the bees knees"> -->
         </section>
     </header>
 
@@ -60,16 +60,16 @@
         </section>
         <section class="gallery">
             <h2 class="gallery__title">Photo Gallery</h2>
-            <div class="gallery__imgs">
-                <img class="gallery__imgs-1" src="./assets/images/Photo-gallery-1.jpg" alt="concert 1">
-                <img class="gallery__imgs-2" src="./assets/images/Photo-gallery-2.jpg" alt="concert 2">
-                <img class="gallery__imgs-3" src="./assets/images/Photo-gallery-3.jpg" alt="concert 3">
-                <img class="gallery__imgs-4" src="./assets/images/Photo-gallery-4.jpg" alt="concert 4">
-                <img class="gallery__imgs-5" src="./assets/images/Photo-gallery-5.jpg" alt="concert 5">
-                <img class="gallery__imgs-6" src="./assets/images/Photo-gallery-6.jpg" alt="concert 6">
-                <img class="gallery__imgs-7" src="./assets/images/Photo-gallery-7.jpg" alt="concert 7">
-                <img class="gallery__imgs-8" src="./assets/images/Photo-gallery-8.jpg" alt="concert 8">
-                <img class="gallery__imgs-9" src="./assets/images/Photo-gallery-9.jpg" alt="concert 9">
+            <div class="gallery__img-section">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-1.jpg" alt="concert 1">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-2.jpg" alt="concert 2">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-3.jpg" alt="concert 3">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-4.jpg" alt="concert 4">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-5.jpg" alt="concert 5">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-6.jpg" alt="concert 6">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-7.jpg" alt="concert 7">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-8.jpg" alt="concert 8">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-9.jpg" alt="concert 9">
             </div>
         </section>
     </main>
