--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
             <h2 class="introduction__title">About the Musicians</h2>
             <img class="introduction__img" src="./assets/images/band.jpg" alt="about the band">
             <p class="introduction__content">"We push each other to be the best. 
-                It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
-            <br>
-            <p class="introduction__text">- Lead vocalist of The Bees Knees</p>
+                It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”
+                <br><span class="introduction__content--quote-author">- Lead vocalist of The Bees Knees</span></p>
         </section>
         <section class="about">
             <h3 class="about__title">The Bees Knees</h3>
