--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
     </header>
 
     <main>
-        <section class="introduction">
-            <h2 class="introduction__title">About the Musicians</h2>
-            <img class="introduction__img" src="./assets/images/band.jpg" alt="about the band">
-            <p class="introduction__content">"We push each other to be the best. 
-                It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”
-                <br><span class="introduction__content--quote-author">- Lead vocalist of The Bees Knees</span></p>
-        </section>
         <section class="about">
-            <h3 class="about__title">The Bees Knees</h3>
-            <p class="about__content">The Bees Knees is a pop rock band originating from San Francisco, California. The band 
+            <h2 class="about__title">About the Musicians</h2>
+            <img class="about__img" src="./assets/images/band.jpg" alt="about the band">
+            <p class="about__content">"We push each other to be the best. 
+                It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”
+                <br><span class="about__content--quote-author">- Lead vocalist of The Bees Knees</span></p>
+        </section>
+        <section class="information">
+            <h3 class="information__title">The Bees Knees</h3>
+            <p class="information__content">The Bees Knees is a pop rock band originating from San Francisco, California. The band 
                                     consists a dynamic lineup featuring two lead 
                                     vocalists, two guitarists, a bassist, a keyboardist and a 
                                     drummer. The band achieved its first commercial success as an 
@@ -45,7 +45,7 @@
                                     succeed even further with more support, pushing The Bees Knees to sign with a well 
                                     known record label.</p>
             <br>
-            <p class="about__content">From there, the band has soared, gaining 
+            <p class="information__content">From there, the band has soared, gaining 
                                 international recognition and ranking in the 
                                 top 10 on the Poster Charts. New fans 
                                 immediately fell in love with the band’s original 
@@ -73,14 +73,36 @@
         </section>
     </main>
     <footer>
-        <section class="">
-
+        <section class="in-touch">
+            <h2 class="in-touch__title">Get in Touch</h2>
+            <div class="in-touch__media-icons">
+                <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-instagram.svg" alt="instagram">
+                <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-facebook.svg" alt="facebook">
+                <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-twitter.svg" alt="twitter">
+            </div>
         </section>
         <section class="management">
-            
+            <h3>The Bees Knees Management</h3>
+            <p>503 Broadway Penthouse,
+                <br>
+                New York, NY 10012, USA
+            </p>
         </section>
         <section class="artist-group">
-
+            <h3>Limitless Artist Group</h3>
+            <p>Booking Agents for
+                <br>
+                US / South America / Japan
+            </p>
+            <p>bookings@limitlessag.com</p>
+        </section>
+        <section class="arch-entertainment">
+            <h3>ARCH Entertainment</h3>
+            <p class="">Booking Agents for
+                <br>
+                UK / EU / AU
+            </p>
+            <p>bookings@archentertainment.com</p>
         </section>
     </footer>
 </body>
