--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
     <header>
         <section class="navigation">
-            <div class="navigation__title">
-                <h1>BANDSITE</h1>
-            </div>
+            <img class="navigation__icon" src=".\assets\Logo\Logo-bandsite.svg">
             <ul class="navigation__btns">
                 <li><a class="navigation__bio-btn" href="./index.html">Biography</a></li>
                 <li><a class="navigation__shows-btn" href="">Shows</a></li>
@@ -73,37 +71,45 @@
         </section>
     </main>
     <footer>
-        <section class="in-touch">
-            <h2 class="in-touch__title">Get in Touch</h2>
-            <div class="in-touch__media-icons">
-                <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-instagram.svg" alt="instagram">
-                <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-facebook.svg" alt="facebook">
-                <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-twitter.svg" alt="twitter">
-            </div>
-        </section>
-        <section class="management">
-            <h3>The Bees Knees Management</h3>
-            <p>503 Broadway Penthouse,
-                <br>
-                New York, NY 10012, USA
-            </p>
-        </section>
-        <section class="artist-group">
-            <h3>Limitless Artist Group</h3>
-            <p>Booking Agents for
-                <br>
-                US / South America / Japan
-            </p>
-            <p>bookings@limitlessag.com</p>
-        </section>
-        <section class="arch-entertainment">
-            <h3>ARCH Entertainment</h3>
-            <p class="">Booking Agents for
-                <br>
-                UK / EU / AU
-            </p>
-            <p>bookings@archentertainment.com</p>
-        </section>
+        <article class="footer">
+            <section class="in-touch">
+                <h2 class="in-touch__title">Get in Touch</h2>
+                <div class="in-touch__media-icons">
+                    <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-instagram.svg" alt="instagram">
+                    <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-facebook.svg" alt="facebook">
+                    <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-twitter.svg" alt="twitter">
+                </div>
+            </section>
+            <section class="management">
+                <h3 class="management__title">The Bees Knees Management</h3>
+                <p class="management__address">503 Broadway Penthouse,
+                    <br>
+                    New York, NY 10012, USA
+                </p>
+                <p class="management__email">info@thebeesknees.com</p>
+            </section>
+            <section class="artist-group">
+                <h3 class="artist-group__title">Limitless Artist Group</h3>
+                <p class="artist-group__booking">Booking Agents for
+                    <br>
+                    US / South America / Japan
+                </p>
+                <p class="artist-group__email">bookings@limitlessag.com</p>
+            </section>
+            <section class="arch-entertainment">
+                <h3 class="arch-entertainment__title">ARCH Entertainment</h3>
+                <p class="arch-entertainment__booking">Booking Agents for
+                    <br>
+                    UK / EU / AU
+                </p>
+                <p class="arch-entertainment__email">bookings@archentertainment.com</p>
+            </section>
+            <section class="footer-logo">
+                <img class="footer-logo__title-mobile" src=".\assets\Logo\Logo-bandsite.svg"  alt="bandsite">
+                <img class="footer-logo__title--tablet" src=".\assets\Logo\Logo-bandsite.svg"  alt="bandsite">
+                <p class="footer-logo__copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
+            </section>
+        </article>
     </footer>
 </body>
 </html>
