finishing mobile nav

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <section class="navigation">
             <img class="navigation__icon" src=".\assets\Logo\Logo-bandsite.svg">
             <ul class="navigation__btns">
-                <li><a class="navigation__bio-btn" href="./index.html">Biography</a></li>
-                <li><a class="navigation__shows-btn" href="">Shows</a></li>
+                <li><a class="navigation__bio-btn active" href="./index.html">Biography</a></li>
+                <li><a class="navigation__shows-btn inactive" href="">Shows</a></li>
             </ul>
         </section>
 
