--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <img class="about__img" src="./assets/images/band.jpg" alt="about the band">
             <p class="about__content">"We push each other to be the best. 
                 It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”
-                <br><span class="about__content--quote-author">- Lead vocalist of The Bees Knees</span></p>
+                </p><br>
+                <p class="about__quote-author">- Lead vocalist of The Bees Knees</p>
         </section>
         <section class="information">
             <h3 class="information__title">The Bees Knees</h3>
@@ -74,14 +75,16 @@
     </main>
     <footer>
         <article class="footer">
-            <section class="in-touch">
-                <h2 class="in-touch__title">Get in Touch</h2>
-                <div class="in-touch__media-icons">
-                    <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-instagram.svg" alt="instagram">
-                    <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-facebook.svg" alt="facebook">
-                    <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-twitter.svg" alt="twitter">
-                </div>
-            </section>
+            <div class="footer__top">
+                <section class="in-touch">
+                    <h2 class="in-touch__title">Get in Touch</h2>
+                    <div class="in-touch__media-icons">
+                        <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-instagram.svg" alt="instagram">
+                        <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-facebook.svg" alt="facebook">
+                        <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-twitter.svg" alt="twitter">
+                    </div>
+                </section>
+            </div>
             <section class="management">
                 <h3 class="management__title">The Bees Knees Management</h3>
                 <p class="management__address">503 Broadway Penthouse,
