--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 <img class="gallery__imgs" src="./assets/images/Photo-gallery-7.jpg" alt="concert 7">
                 <img class="gallery__imgs" src="./assets/images/Photo-gallery-8.jpg" alt="concert 8">
                 <img class="gallery__imgs" src="./assets/images/Photo-gallery-9.jpg" alt="concert 9">
-            </div>
-        </section>
+            </section>
+        </div>
     </main>
     <footer>
         <article class="footer">
@@ -84,34 +84,38 @@
                         <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-twitter.svg" alt="twitter">
                     </div>
                 </section>
+                <img class="footer-logo__title-tablet" src=".\assets\Logo\Logo-bandsite.svg"  alt="bandsite">
             </div>
-            <section class="management">
-                <h3 class="management__title">The Bees Knees Management</h3>
-                <p class="management__address">503 Broadway Penthouse,
-                    <br>
-                    New York, NY 10012, USA
-                </p>
-                <p class="management__email">info@thebeesknees.com</p>
-            </section>
-            <section class="artist-group">
-                <h3 class="artist-group__title">Limitless Artist Group</h3>
-                <p class="artist-group__booking">Booking Agents for
-                    <br>
-                    US / South America / Japan
-                </p>
-                <p class="artist-group__email">bookings@limitlessag.com</p>
-            </section>
-            <section class="arch-entertainment">
-                <h3 class="arch-entertainment__title">ARCH Entertainment</h3>
-                <p class="arch-entertainment__booking">Booking Agents for
-                    <br>
-                    UK / EU / AU
-                </p>
-                <p class="arch-entertainment__email">bookings@archentertainment.com</p>
-            </section>
+            <div class="footer__content">
+                <section class="management">
+                    <h3 class="management__title">The Bees Knees Management</h3>
+                    <p class="management__address">503 Broadway Penthouse,
+                        <br>
+                        New York, NY 10012, USA
+                    </p>
+                    <p class="management__email">info@thebeesknees.com</p>
+                </section>
+                <section class="artist-group">
+                    <h3 class="artist-group__title">Limitless Artist Group</h3>
+                    <p class="artist-group__booking">Booking Agents for
+                        <br>
+                        US / South America / Japan
+                    </p>
+                    <p class="artist-group__email">bookings@limitlessag.com</p>
+                </section>
+                <section class="arch-entertainment">
+                    <h3 class="arch-entertainment__title">ARCH Entertainment</h3>
+                    <p class="arch-entertainment__booking">Booking Agents for
+                        <br>
+                        UK / EU / AU
+                    </p>
+                    <p class="arch-entertainment__email">bookings@archentertainment.com</p>
+                </section>
+
+            </div>
             <section class="footer-logo">
                 <img class="footer-logo__title-mobile" src=".\assets\Logo\Logo-bandsite.svg"  alt="bandsite">
-                <img class="footer-logo__title--tablet" src=".\assets\Logo\Logo-bandsite.svg"  alt="bandsite">
+                <!-- <img class="footer-logo__title-tablet" src=".\assets\Logo\Logo-bandsite.svg"  alt="bandsite"> -->
                 <p class="footer-logo__copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
             </section>
         </article>
