--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <section class="navigation">
-            <a href="./index.html"><img class="navigation__icon" src=".\assets\Logo\Logo-bandsite.svg"></a>
+            <a href="./index.html"><img class="navigation__icon" src="./assets/Logo/Logo-bandsite.svg"></a>
             <ul class="navigation__btns">
                 <li><a class="navigation__bio-btn active" href="./index.html">Biography</a></li>
                 <li><a class="navigation__shows-btn inactive" href="">Shows</a></li>
@@ -19,8 +19,6 @@
 
         <section class="hero">
             <h2 class="hero__title">The Bees Knees</h2>
-            <!-- <img class="hero__img" src="./assets/images/hero-bio.jpg" alt="the bees knees"> -->
-        </section>
     </header>
 
     <main>
@@ -114,7 +112,7 @@
 
             </div>
             <section class="footer-logo">
-                <img class="footer-logo__title-mobile" src=".\assets\Logo\Logo-bandsite.svg"  alt="bandsite">
+                <img class="footer-logo__title-mobile" src="./assets/Logo/Logo-bandsite.svg"  alt="bandsite">
                 <!-- <img class="footer-logo__title-tablet" src=".\assets\Logo\Logo-bandsite.svg"  alt="bandsite"> -->
                 <p class="footer-logo__copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
             </section>
