--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-twitter.svg" alt="twitter">
                     </div>
                 </section>
-                <img class="footer-logo__title-tablet" src=".\assets\Logo\Logo-bandsite.svg"  alt="bandsite">
+                <img class="footer__title-tablet" src="./assets/Logo/logo-bandsite.svg"  alt="bandsite">
             </div>
             <div class="footer__content">
                 <section class="management">
@@ -111,11 +111,8 @@
                 </section>
 
             </div>
-            <section class="footer-logo">
-                <img class="footer-logo__title-mobile" src="./assets/Logo/Logo-bandsite.svg"  alt="bandsite">
-                <!-- <img class="footer-logo__title-tablet" src=".\assets\Logo\Logo-bandsite.svg"  alt="bandsite"> -->
-                <p class="footer-logo__copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
-            </section>
+                <img class="footer__title-mobile" src="./assets/Logo/Logo-bandsite.svg"  alt="bandsite">
+                <p class="footer__copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
         </article>
     </footer>
 </body>
