shows hero mobile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="./index.html"><img class="navigation__icon" src="./assets/Logo/Logo-bandsite.svg"></a>
             <ul class="navigation__btns">
                 <li><a class="navigation__bio-btn active" href="./index.html">Biography</a></li>
-                <li><a class="navigation__shows-btn inactive" href="">Shows</a></li>
+                <li><a class="navigation__shows-btn inactive" href="./pages/shows.html">Shows</a></li>
             </ul>
         </section>
 
