--- a/pages/shows.html
+++ b/pages/shows.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/partials/_global.css"/>
-    <link rel="stylesheet" href="styles/bio.css" />
+    <link rel="stylesheet" href="/styles/partials/_global.css"/>
+    <link rel="stylesheet" href="/styles/shows.css"/>
     <title>Bandsite</title>
 </head>
 <body>
     <header>
         <section class="navigation">
-            <a href="./index.html"><img class="navigation__icon" src="./assets/Logo/Logo-bandsite.svg"></a>
+            <a href="../index.html"><img class="navigation__icon" src="../assets/Logo/Logo-bandsite.svg" src=""></a>
             <ul class="navigation__btns">
-                <li><a class="navigation__bio-btn active" href="./index.html">Biography</a></li>
-                <li><a class="navigation__shows-btn inactive" href="">Shows</a></li>
+                <li><a class="navigation__bio-btn inactive" href="../index.html">Biography</a></li>
+                <li><a class="navigation__shows-btn active" href="/pages/shows.html">Shows</a></li>
             </ul>
         </section>
         <section class="hero">
             <h3 class="hero__album">Beautiful Beasts Album</h3>
-            <h2 class="hero__title">The Bees Knees</h2>
-            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1778438820&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+            <h2 class="hero__title">Stripes of Yellow x<br>For The Stings</h2>
+            <iframe class="hero__soundcloud" width="100%" height="70" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1778438820&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
     </header>
 
     <main>
@@ -42,12 +42,12 @@
                     <section class="in-touch">
                         <h2 class="in-touch__title">Get in Touch</h2>
                         <div class="in-touch__media-icons">
-                            <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-instagram.svg" alt="instagram">
-                            <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-facebook.svg" alt="facebook">
-                            <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-twitter.svg" alt="twitter">
+                            <img class="in-touch__media-icon" src="../assets/icons/SVG/Icon-instagram.svg" alt="instagram">
+                            <img class="in-touch__media-icon" src="../assets/icons/SVG/Icon-facebook.svg" alt="facebook">
+                            <img class="in-touch__media-icon" src="../assets/icons/SVG/Icon-twitter.svg" alt="twitter">
                         </div>
                     </section>
-                    <img class="footer__title-tablet" src="./assets/Logo/logo-bandsite.svg"  alt="bandsite">
+                    <img class="footer__title-tablet" src="../assets/Logo/logo-bandsite.svg"  alt="bandsite">
                 </div>
                 <div class="footer__content">
                     <section class="management">
@@ -76,7 +76,7 @@
                     </section>
     
                 </div>
-                    <img class="footer__title-mobile" src="./assets/Logo/Logo-bandsite.svg"  alt="bandsite">
+                    <img class="footer__title-mobile" src="../assets/Logo/Logo-bandsite.svg"  alt="bandsite">
                     <p class="footer__copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
             </article>
         </footer>
