--- a/pages/shows.html
+++ b/pages/shows.html
@@ -17,8 +17,10 @@
             </ul>
         </section>
         <section class="hero">
-            <h3 class="hero__album">Beautiful Beasts Album</h3>
-            <h2 class="hero__title">Stripes of Yellow x<br>For The Stings</h2>
+            <div class="hero__text">
+                <h3 class="hero__album">Beautiful Beasts Album</h3>
+                <h2 class="hero__title">Stripes of Yellow x<br>For The Stings</h2>
+            </div>
             <iframe class="hero__soundcloud" width="100%" height="70" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1778438820&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
     </header>
 
