starting bio comment section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
                 <img class="gallery__imgs" src="./assets/images/Photo-gallery-9.jpg" alt="concert 9">
             </section>
         </div>
+
+        <section class="comments">
+            <div class="comments__wrapper">
+                <img class="comments__img" src="./assets/images/Mohan-muruge.jpg" alt="profile picture"> 
+            </div>
+        </section>
     </main>
     <footer>
         <article class="footer">
