--- a/index.html
+++ b/index.html
@@ -72,9 +72,19 @@
         </div>
 
         <section class="comments">
+            <h2 class="comments__title">Join the Conversation</h2>
             <div class="comments__wrapper">
                 <img class="comments__img" src="./assets/images/Mohan-muruge.jpg" alt="profile picture"> 
             </div>
+            <form class="comments__form">
+                <label for="name" class="comments__name-label">NAME</label>
+                <input type="name" name="name" class="comments__name-input" placeholder="Enter your name">
+
+                <label for="comment" class="comments__comment-label">COMMENT</label>
+                <input type="text" name="comment" class="comments__comment-input" placeholder="Add a new comment">
+
+                <button type="submit" class="comments__btn">COMMENT</button>
+            </form>
         </section>
     </main>
     <footer>
