--- a/index.html
+++ b/index.html
@@ -77,11 +77,15 @@
                 <img class="comments__img" src="./assets/images/Mohan-muruge.jpg" alt="profile picture"> 
             </div>
             <form class="comments__form">
-                <label for="name" class="comments__name-label">NAME</label>
-                <input type="name" name="name" class="comments__name-input" placeholder="Enter your name">
+                <div class="comments__name-wrapper">
+                    <label for="name" class="comments__name-label">NAME</label>
+                    <input type="name" name="name" class="comments__name-input" placeholder="Enter your name">
+                </div>
 
-                <label for="comment" class="comments__comment-label">COMMENT</label>
-                <input type="text" name="comment" class="comments__comment-input" placeholder="Add a new comment">
+                <div class="comments__comment-wrapper">
+                    <label for="comment" class="comments__comment-label">COMMENT</label>
+                    <input type="text" name="comment" class="comments__comment-input" placeholder="Add a new comment">
+                </div>
 
                 <button type="submit" class="comments__btn">COMMENT</button>
             </form>
