bio comment input section desktop

--- a/index.html
+++ b/index.html
@@ -86,9 +86,12 @@
                     <label for="comment" class="comments__comment-label">COMMENT</label>
                     <input type="text" name="comment" class="comments__comment-input" placeholder="Add a new comment">
                 </div>
-
+                
                 <button type="submit" class="comments__btn">COMMENT</button>
             </form>
+            <ul class="comments__content">
+
+            </ul>
         </section>
     </main>
     <footer>
