adjusting name value in js

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </form>
 
             <form class="comments-form">
-                <input class="comment-form__title" type="text" placeholder="name"/>
+                <input class="comment-form__name" type="text" placeholder="name"/>
                 <input class="comment-form__content" type="text" placeholder="content" />
                 <input class="comment-form__date" type="timestamp" placeholder="timestamp"/>
             </form>
