adjusting name value in js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/partials/_global.css"/>
     <link rel="stylesheet" href="styles/bio.css" />
     <title>Bandsite</title>
+    <script src="./scripts/index-page.js" defer></script>
 </head>
 <body>
     <header>
@@ -76,6 +77,7 @@
             <div class="comments__wrapper">
                 <img class="comments__img" src="./assets/images/Mohan-muruge.jpg" alt="profile picture"> 
             </div>
+
             <form class="comments__form">
                 <div class="comments__name-wrapper">
                     <label for="name" class="comments__name-label">NAME</label>
@@ -90,11 +92,11 @@
                 <button type="submit" class="comments__btn">COMMENT</button>
             </form>
 
-            <form class="comments-form">
+            <!-- <form class="comments-form">
                 <input class="comment-form__name" type="text" placeholder="name"/>
                 <input class="comment-form__content" type="text" placeholder="content" />
                 <input class="comment-form__date" type="timestamp" placeholder="timestamp"/>
-            </form>
+            </form> -->
 
             <!-- list to append comments to -->
             <ul class="comments__list">
@@ -147,6 +149,6 @@
         </article>
     </footer>
 
-    <script src="./script/main.js"></script>
+    <!-- <script src="./scripts/index-page.js"></script> -->
 </body>
 </html>
