base javascript for shows

--- a/index.html
+++ b/index.html
@@ -92,14 +92,8 @@
                 <button type="submit" class="comments__btn">COMMENT</button>
             </form>
 
-            <!-- <form class="comments-form">
-                <input class="comment-form__name" type="text" placeholder="name"/>
-                <input class="comment-form__content" type="text" placeholder="content" />
-                <input class="comment-form__date" type="timestamp" placeholder="timestamp"/>
-            </form> -->
-
             <!-- list to append comments to -->
-            <ul class="comments__list">
+            <ul class="comment-list">
 
             </ul>
         </section>
