--- a/pages/shows.html
+++ b/pages/shows.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/styles/partials/_global.css"/>
     <link rel="stylesheet" href="/styles/shows.css"/>
     <title>Bandsite</title>
+    <script src="../scripts/build-shows-page.js" defer></script>
 </head>
 <body>
     <header>
@@ -27,12 +28,8 @@
     <main>
         <section class="shows">
             <h2 class="shows__title">Shows</h2>
-            <ul class="shows__list-titles">
-                <li>DATE</li>
-                <li>VENUE</li>
-                <li>LOCATION</li>
-            </ul>
-            <ul class="shows__array">
+            <!-- Empty array - created in JavaScript -->
+            <ul class="shows-array">
 
             </ul>
         </section>
