adding more description to the alt attributes on images

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <section class="navigation">
-            <a href="../index.html"><img class="navigation__icon" src="../assets/Logo/Logo-bandsite.svg" src=""></a>
+            <a href="../index.html"><img class="navigation__icon" src="../assets/Logo/Logo-bandsite.svg" alt="bandsite logo"></a>
             <ul class="navigation__btns">
                 <li><a class="navigation__bio-btn inactive" href="../index.html">Biography</a></li>
                 <li><a class="navigation__shows-btn active" href="/pages/shows.html">Shows</a></li>
@@ -41,9 +41,9 @@
                     <section class="in-touch">
                         <h2 class="in-touch__title">Get in Touch</h2>
                         <div class="in-touch__media-icons">
-                            <img class="in-touch__media-icon" src="../assets/icons/SVG/Icon-instagram.svg" alt="instagram">
-                            <img class="in-touch__media-icon" src="../assets/icons/SVG/Icon-facebook.svg" alt="facebook">
-                            <img class="in-touch__media-icon" src="../assets/icons/SVG/Icon-twitter.svg" alt="twitter">
+                            <img class="in-touch__media-icon" src="../assets/icons/SVG/Icon-instagram.svg" alt="instagram icon">
+                            <img class="in-touch__media-icon" src="../assets/icons/SVG/Icon-facebook.svg" alt="facebook icon">
+                            <img class="in-touch__media-icon" src="../assets/icons/SVG/Icon-twitter.svg" alt="twitter icon">
                         </div>
                     </section>
                     <img class="footer__title-tablet" src="../assets/Logo/logo-bandsite.svg"  alt="bandsite">
