adding more description to the alt attributes on images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <section class="navigation">
-            <a href="./index.html"><img class="navigation__icon" src="./assets/Logo/Logo-bandsite.svg"></a>
+            <a href="./index.html"><img class="navigation__icon" src="./assets/Logo/Logo-bandsite.svg" alt="bandsite logo"></a>
             <ul class="navigation__btns">
                 <li><a class="navigation__bio-btn active" href="./index.html">Biography</a></li>
                 <li><a class="navigation__shows-btn inactive" href="./pages/shows.html">Shows</a></li>
@@ -60,15 +60,15 @@
         <section class="gallery">
             <h2 class="gallery__title">Photo Gallery</h2>
             <div class="gallery__img-section">
-                <img class="gallery__imgs" src="./assets/images/Photo-gallery-1.jpg" alt="concert 1">
-                <img class="gallery__imgs" src="./assets/images/Photo-gallery-2.jpg" alt="concert 2">
-                <img class="gallery__imgs" src="./assets/images/Photo-gallery-3.jpg" alt="concert 3">
-                <img class="gallery__imgs" src="./assets/images/Photo-gallery-4.jpg" alt="concert 4">
-                <img class="gallery__imgs" src="./assets/images/Photo-gallery-5.jpg" alt="concert 5">
-                <img class="gallery__imgs" src="./assets/images/Photo-gallery-6.jpg" alt="concert 6">
-                <img class="gallery__imgs" src="./assets/images/Photo-gallery-7.jpg" alt="concert 7">
-                <img class="gallery__imgs" src="./assets/images/Photo-gallery-8.jpg" alt="concert 8">
-                <img class="gallery__imgs" src="./assets/images/Photo-gallery-9.jpg" alt="concert 9">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-1.jpg" alt="concert people">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-2.jpg" alt="concert dancing woman">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-3.jpg" alt="concert hands">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-4.jpg" alt="concert woman">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-5.jpg" alt="concert string foam">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-6.jpg" alt="concert singer">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-7.jpg" alt="concert ">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-8.jpg" alt="concert dj">
+                <img class="gallery__imgs" src="./assets/images/Photo-gallery-9.jpg" alt="concert confetti">
             </section>
         </div>
 
@@ -102,9 +102,9 @@
                 <section class="in-touch">
                     <h2 class="in-touch__title">Get in Touch</h2>
                     <div class="in-touch__media-icons">
-                        <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-instagram.svg" alt="instagram">
-                        <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-facebook.svg" alt="facebook">
-                        <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-twitter.svg" alt="twitter">
+                        <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-instagram.svg" alt="instagram icon">
+                        <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-facebook.svg" alt="facebook icon">
+                        <img class="in-touch__media-icon" src="./assets/icons/SVG/Icon-twitter.svg" alt="twitter icon">
                     </div>
                 </section>
                 <img class="footer__title-tablet" src="./assets/Logo/logo-bandsite.svg"  alt="bandsite">
@@ -141,6 +141,5 @@
         </article>
     </footer>
 
-    <!-- <script src="./scripts/index-page.js"></script> -->
 </body>
 </html>
