--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="information">
             <h3 class="information__title">The Bees Knees</h3>
             <div class="information__content">
-                <p class="information__content-item">The Bees Knees is a pop rock band originating from San Francisco, California. The band 
+                <p class="information__content">The Bees Knees is a pop rock band originating from San Francisco, California. The band 
                                         consists a dynamic lineup featuring two lead 
                                         vocalists, two guitarists, a bassist, a keyboardist and a 
                                         drummer. The band achieved its first commercial success as an 
@@ -43,7 +43,7 @@
                                         working with both new and seasoned acts, the manager was confident the band could 
                                         succeed even further with more support, pushing The Bees Knees to sign with a well 
                                         known record label.</p>
-                <p class="information__content-item">From there, the band has soared, gaining 
+                <p class="information__content">From there, the band has soared, gaining 
                                     international recognition and ranking in the 
                                     top 10 on the Poster Charts. New fans 
                                     immediately fell in love with the band’s original 
