--- a/pages/shows.html
+++ b/pages/shows.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="/styles/partials/_global.css"/>
     <link rel="stylesheet" href="/styles/shows.css"/>
     <title>Bandsite</title>
+    <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
+    <script src="../scripts/band-site-api.js"></script>
     <script src="../scripts/build-shows-page.js" defer></script>
 </head>
 <body>
