--- a/pages/shows.html
+++ b/pages/shows.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/styles/shows.css"/>
     <title>Bandsite</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
-    <script src="../scripts/band-site-api.js"></script>
+    <script src="../scripts/band-site-api.js" defer></script>
     <script src="../scripts/build-shows-page.js" defer></script>
 </head>
 <body>
