--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Bandsite</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
     <script src="./scripts/band-site-api.js" defer></script>
-    <script src="./scripts/index-page.js" defer></script>
+    <script type="module" src="./scripts/index-page.js" defer></script>
 </head>
 <body>
     <header>
