--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="styles/partials/_global.css"/>
     <link rel="stylesheet" href="styles/bio.css" />
     <title>Bandsite</title>
-    <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
-    <script src="./scripts/band-site-api.js" defer></script>
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js" defer></script>
     <script type="module" src="./scripts/index-page.js" defer></script>
 </head>
 <body>
