--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <form class="comments__form">
                 <label for="name" class="comments__name-label">NAME</label>
                 <div class="comments__name-wrapper">
-                    <input type="name" name="name" class="comments__name-input" placeholder="Enter your name">
+                    <input id="nameInput" type="name" name="name" class="comments__name-input" placeholder="Enter your name">
                 </div>
 
                 <label for="comment" class="comments__comment-label">COMMENT</label>
