adjusting the styling of shows page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                 <label for="comment" class="comments__comment-label">COMMENT</label>
                 <div class="comments__comment-wrapper">
-                    <textarea type="text" name="comment" class="comments__comment-input" placeholder="Add a new comment"></textarea>
+                    <textarea name="comment" class="comments__comment-input" placeholder="Add a new comment"></textarea>
                 </div>
                 
                 <button type="submit" class="comments__btn">COMMENT</button>
