--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
                 <div class="comments__comment-wrapper">
                     <textarea name="comment" class="comments__comment-input" placeholder="Add a new comment"></textarea>
                 </div>
-                
-                <button type="submit" class="comments__btn">COMMENT</button>
+                <div class="comment__btn-wrapper">
+                    <button type="submit" class="comments__btn">COMMENT</button>
+                </div>
             </form>
 
             <!-- list to append comments to -->
